# voxy-code-challenge

./: LICENSE  README.md  pyproject.toml
code_challenge/: settings.py  urls.py
word_count/: logic.py  tests.py  urls.py  views.py
word_count/static/word_count/: word_count.js
word_count/templates/word_count/: word_count.html
