[tool.poetry]
name = "code_challenge"
version = "0.1.0"
description = "A solution for a word count code challenge."
authors = ["Alexandre Harano <email@ayharano.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "~3.1.3"

[tool.poetry.dev-dependencies]
parsel = "~1.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
